<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Space
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/task_on"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_centerHorizontal="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/task_on_name"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/time_left"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/time_left_in_min"
        android:textSize="50dp"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.12" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pause/Resume"
        android:id="@+id/button10"
        android:onClick="pause"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.12" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/button"
        android:onClick="stop"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/button5"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mark_as_done"
        android:id="@+id/button5"
        android:onClick="done"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</LinearLayout>