<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:duplicateParentState="false"
    android:id="@+id/linear_layout"
    android:measureWithLargestChild="false"
    android:weightSum="1">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="296dp"
        android:id="@+id/list_view" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:layout_weight="0.52">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Create"
            android:id="@+id/button2"
            android:onClick="create_new_task"
            android:layout_above="@+id/button3"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Delete"
            android:onClick="delete_task"
            android:id="@+id/button3"
            android:layout_above="@+id/button4"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark_as_done"
            android:id="@+id/button4"
            android:onClick="mark_as_done"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/button3"
            android:layout_alignStart="@+id/button3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/button7"
            android:onClick="reset"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/button4"
            android:layout_toEndOf="@+id/button4" />
    </RelativeLayout>

</LinearLayout>
